# pytorch_scatter

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  benchmark_after_cuda.md  benchmark_after_cuda.npy  benchmark_before.md  benchmark_before_cuda.md  benchmark_before_cuda.npy  build.py  build.sh  compare_benchmark_results.py  comparison.md  comparison_index.md  install.sh  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: building-conda.yml  building.yml  cu111-ubuntu-latest.sh  cuda.sh  linting.yml  stale.yml  testing-automated.yml  testing.yml
.github/workflows/cuda/: cu101-Linux-env.sh  cu101-Linux.sh  cu101-Windows-env.sh  cu101-Windows.sh  cu102-Linux-env.sh  cu102-Linux.sh  cu102-Windows-env.sh  cu102-Windows.sh  cu111-Linux-env.sh  cu111-Linux.sh  cu111-Windows-env.sh  cu111-Windows.sh  cu113-Linux-env.sh  cu113-Windows-env.sh  cu115-Linux-env.sh  cu115-Linux.sh  cu115-Windows-env.sh  cu115-Windows.sh  cu116-Linux-env.sh  cu116-Linux.sh  cu116-Windows.sh  cu117-Linux-env.sh  cu117-Linux.sh  cu117-Windows-env.sh  cu117-Windows.sh  cu118-Linux-env.sh  cu118-Linux.sh  cu118-Windows-env.sh  cu118-Windows.sh  cu121-Linux-env.sh  cu121-Linux.sh  cu121-Windows-env.sh  cu121-Windows.sh  cu124-Linux-env.sh  cu124-Linux.sh  cu124-Windows-env.sh  cu124-Windows.sh  cu126-Linux-env.sh  cu126-Linux.sh  cu126-Windows-env.sh  (+9 more)
benchmark/: .gitignore  benchmark.ipynb  gather.py  main.py  scatter_segment.py
benchmark/.ipynb_checkpoints/: benchmark-checkpoint.ipynb
cmake/: TorchScatterConfig.cmake.in
conda/pytorch-scatter/: README.md  build_conda.sh  meta.yaml
cpu/: dim_apply.h  gather.cpp  index_info.h  reducer.h  scatter.cpp  segment.cpp  segment_coo.cpp  segment_coo_impl.h  segment_csr.cpp  segment_csr_impl.h  utils.h
csrc/: extensions.h  macros.h  scatter.cpp  scatter.h  segment_coo.cpp  segment_coo.cpp2  segment_csr.cpp  segment_csr.cpp2  utils.h  version.cpp
csrc/cpu/: index_info.h  reducer.h  scatter_cpu.cpp  scatter_cpu.h  segment_coo_cpu.cpp  segment_coo_cpu.h  segment_csr_cpu.cpp  segment_csr_cpu.h  utils.h
csrc/cuda/: atomics.cuh  index_info.cuh  reducer.cuh  scatter_cuda.cu  scatter_cuda.h  segment_coo_cuda.cu  segment_coo_cuda.h  segment_csr_cuda.cu  segment_csr_cuda.h  utils.cuh
cuda/: atomics.cuh  compat.cuh  gather.cpp  gather_kernel.cu  index.cuh  indptr.cuh  scatter.cpp  scatter_kernel.cu  segment.cpp  segment_kernel.cu
docs/: .gitignore  Makefile  index.html  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_figures/: add.tex  build.sh  div.tex  max.tex  mean.tex  min.tex  mul.tex  segment_coo.tex  std.tex  sub.tex  template.tex
docs/source/composite/: softmax.rst
docs/source/functions/: add.rst  composite.rst  div.rst  logsumexp.rst  max.rst  mean.rst  mul.rst  scatter.rst  segment_coo.rst  segment_csr.rst  std.rst  sub.rst
script/: conda.sh  cuda.sh  gcc.sh  install.sh  rename_wheel.py  torch.sh  wheel.py
test/: backward.json  forward.json  test_add.py  test_backward.py  test_broadcasting.py  test_forward.py  test_gather.py  test_grad.py  test_jit.py  test_logsumexp.py  test_max.py  test_max_min.py  test_mean.py  test_multi_gpu.py  test_scatter.py  test_segment.py  test_softmax.py  test_std.py  test_zero_tensors.py  utils.py
test/composite/: test_logsumexp.py  test_softmax.py  test_std.py
torch_scatter/: __init__.py  add.py  div.py  gather.py  helpers.py  logsumexp.py  max.py  mean.py  min.py  mul.py  placeholder.py  scatter.py  segment.py  segment_coo.py  segment_csr.py  std.py  sub.py  testing.py  utils.py
torch_scatter/composite/: __init__.py  logsumexp.py  softmax.py  std.py  utils.py
torch_scatter/functions/: __init__.py  add.py  div.py  ffi.py  max.py  mean.py  min.py  mul.py  scatter.py  sub.py  utils.py
torch_scatter/include/: scatter.h
torch_scatter/kernel/: THCAtomics.cuh  THCIndex.cuh  common.cuh  kernel.cu  kernel.h
torch_scatter/kernel/generic/: common.cu  kernel.cu
torch_scatter/src/: THTensorDimApply.h  THTensorDimApply4.h  cpu.c  cpu.h  cuda.c  cuda.h  scatter.c
torch_scatter/src/generic/: cpu.c  cuda.c  scatter.c
torch_scatter/utils/: ext.py  ffi.py  gen.py
